chore: Se agrega la licencia (LICENSE) y se añade en el archivo README el vinculo